update instructions on stabilization steps

--- a/CodeSubmission/submission_template.ipynb
+++ b/CodeSubmission/submission_template.ipynb
@@ -23,6 +23,7 @@
     "\n",
     "**Terrain types:** Once you have completed this notebook for flat terrain, duplicate 2 more copies of this notebook, and change the terrain type to \"gapped\" and \"blocks\" respectively. Make sure you can run all three notebooks on Colab.\n",
     "\n",
+    "**Stabilization time:** Recall from the decentralized control demo: it might be helpful to first run a number of steps (`n_steps_stabil`) without locomotion so the fly has a chance to stabilize on the ground. This is allowed and does not count toward the 1-second simulation time.\n",
     "\n",
     "**What to submit:** Please submit the following files via Moodle:\n",
     "1. The three *executed* notebooks (ie. the outputs of the code blocks are printed). Name these files \"submission_flat.ipynb\", \"submission_gapped.ipynb\", and \"submission_blocks.ipynb\"\n",
@@ -395,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.16"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
