allow change of initial position

--- a/CodeSubmission/submission_template.ipynb
+++ b/CodeSubmission/submission_template.ipynb
@@ -212,6 +212,12 @@
    },
    "outputs": [],
    "source": [
+    "# You are allowed to slightly change the initial position of the fly\n",
+    "# if it immediately gets stuck due to unfortunate initial placement\n",
+    "# ========== YOUR CODE BELOW ==========\n",
+    "fly_pos = (0, 0, 300)\n",
+    "# ^^^^^^^^^^ END OF YOUR CODE ^^^^^^^^^\n",
+    "\n",
     "run_time = 1\n",
     "out_dir = Path(f'contest_submission_{terrain_type}')\n",
     "\n",
@@ -221,7 +227,7 @@
     "    'joint_stiffness': 2500,\n",
     "    'friction': (friction, 0.005, 0.0001),\n",
     "    'gravity': (0, 0, -9.81e5)}\n",
-    "terrain_config = {'fly_pos': (0, 0, 300),\n",
+    "terrain_config = {'fly_pos': fly_pos,\n",
     "                  'friction': (friction, 0.005, 0.0001)}"
    ]
   },
