--- a/CodeSubmission/submission_template_FILLED_EXAMPLE.ipynb
+++ b/CodeSubmission/submission_template_FILLED_EXAMPLE.ipynb
@@ -45,7 +45,15 @@
     "id": "1f8eXBnSENTw",
     "outputId": "f2dc3629-c134-42d6-f05e-d6d56dc54119"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping - not on Colab\n"
+     ]
+    }
+   ],
    "source": [
     "# #@title Install `flygym` on Colab\n",
     "\n",
@@ -220,6 +228,12 @@
    },
    "outputs": [],
    "source": [
+    "# You are allowed to slightly change the initial position of the fly\n",
+    "# if it immediately gets stuck due to unfortunate initial placement\n",
+    "# ========== YOUR CODE BELOW ==========\n",
+    "fly_pos = (0, 0, 300)\n",
+    "# ^^^^^^^^^^ END OF YOUR CODE ^^^^^^^^^\n",
+    "\n",
     "run_time = 1\n",
     "out_dir = Path(f'contest_submission_{terrain_type}')\n",
     "\n",
@@ -229,7 +243,7 @@
     "    'joint_stiffness': 2500,\n",
     "    'friction': (friction, 0.005, 0.0001),\n",
     "    'gravity': (0, 0, -9.81e5)}\n",
-    "terrain_config = {'fly_pos': (0, 0, 300),\n",
+    "terrain_config = {'fly_pos': fly_pos,\n",
     "                  'friction': (friction, 0.005, 0.0001)}"
    ]
   },
@@ -441,7 +455,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████| 14800/14800 [00:34<00:00, 433.47it/s]\n"
+      "100%|██████████████████████████████████████████████| 14800/14800 [00:34<00:00, 428.85it/s]\n"
      ]
     }
    ],
